package edu.austral.ingsis.math.Formula;

public interface Log {

    Void addExpression(Function log);
    String showLoggedExpressions();
}
